fix stretched background image

--- a/src/App.css
+++ b/src/App.css
@@ -18,6 +18,7 @@
 
 body {
   background-color: black;
+  overflow-x: hidden;
 }
 
 h1,
@@ -25,14 +26,12 @@ h2,
 h3,
 p {
   z-index: 99;
-  letter-spacing: 0.3vh;
 }
 
 h1 {
   font-family: "Quicksand", sans-serif;
   text-align: center;
   letter-spacing: 2px;
-  letter-spacing: 0.8vh;
 }
 
 h2 {
@@ -40,5 +39,4 @@ h2 {
   text-align: center;
   font-size: 7vmin;
   font-weight: 400;
-  letter-spacing: 0.8vh;
 }
